# cautious-chainsaw

./: .env.example  .gitignore  .vercelignore  E2E_PIPELINE_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  SPRINT_SUMMARY_LLM_Integration.md  SPRINT_SUMMARY_v1.1.md  SPRINT_SUMMARY_v1.2.md  SPRINT_SUMMARY_v1.3.md  SPRINT_SUMMARY_v1.4.md  SPRINT_SUMMARY_v1.5.md  SPRINT_SUMMARY_v1.6.md  SPRINT_SUMMARY_v1.7.md  SPRINT_SUMMARY_v1.8.md  SPRINT_SUMMARY_v1.9.md  SPRINT_SUMMARY_v2.0.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
config/: production.yaml
data/fixtures/: binance_btcusdt.json  mt5_eurusd.json
data/strategies/: rsi_oversold.yaml
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: BACKTESTING_FRAMEWORK_OVERVIEW.md  INOT_DEEP_DIVE_STRATEGY_BUILDER.md  INOT_VALUE_PROPOSITION.md  KRITISKĀS PROBLĒMAS.docx  KRITISKĀS PROBLĒMAS.md  MEMORY_MODULE.md  README_LLM_Integration.md  RESILIENCE_HANDLING_AND_CIRCUIT_BREAKERS.md  STRATEGY_BUILDER_SPEC_v1.md  UI_ARCHITECTURE_INOT_ANALYSIS.md  UI_IMPLEMENTATION_ROADMAP.md  UI_QUICK_START_GUIDE.md  technical_postmortem_v1.md
examples/: demo_backtest.py  demo_economic_calendar.py  demo_generate_order.py  demo_inot_claude.py  demo_inot_full_integration.py  demo_inot_integration.py  demo_input_fusion.py  demo_llm_integration.py  demo_market_context.py  demo_new_tools.py  demo_news_stream.py  demo_resilience.py  demo_risk_with_normalizer.py  demo_strategy_builder.py  demo_strategy_phase3.py  demo_tools.py
frontend/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/Backtesting/: EquityCurveChart.tsx  MetricsTable.tsx  StrategySelector.tsx  TradeListGrid.tsx
frontend/src/hooks/: useBacktest.ts  useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/pages/: BacktestWorkbench.tsx  LiveDashboard.tsx  SystemMonitor.tsx
frontend/src/stores/: backtestStore.ts  decisionStore.ts  fusionStore.ts
reflection_log/: codex_ops_cycle.md
reports/: final_validation_summary.md  pre_release_audit.md  repo_integrity.json  static_test_results.json  test_summary.md
scripts/: static_test_runner.py  validate_repo_integrity.py
src/: __init__.py  index.py
src/Memory/: __init__.py  models.py
src/Memory/storage/: __init__.py  base.py  sqlite_store.py
src/backend/: app.py  config.py
src/backend/dependencies/: __init__.py  auth.py
src/backend/routes/: __init__.py  backtests.py  chat.py  decisions.py  health.py  strategies.py
src/backend/services/: __init__.py  backtest_service.py  decision_service.py  fusion_service.py
src/trading_agent/: __init__.py  main.py
src/trading_agent/adapters/: __init__.py  adapter_base.py  adapter_mock.py  adapter_mt5.py  bridge.py
src/trading_agent/backtesting/: __init__.py  backtest_engine.py  historical_data.py  performance_metrics.py  strategies.py
src/trading_agent/core/: __init__.py  confidence_model.py  orchestration.py  symbol_normalization.py
src/trading_agent/decision/: __init__.py  engine.py
src/trading_agent/inot_engine/: README.md  __init__.py  calibration.py  golden_tests.py  orchestrator.py  orchestrator_optimized.py  validator.py
src/trading_agent/input_fusion/: __init__.py  data_stream.py  economic_calendar_stream.py  engine.py  event_impact_scorer.py  event_normalizer.py  fusion_buffer.py  news_normalizer.py  news_stream.py  pre_event_risk_manager.py  price_stream.py  sentiment_analyzer.py  symbol_relevance.py  temporal_aligner.py
src/trading_agent/llm/: __init__.py  anthropic_llm_client.py  inot_adapter.py  llm_integration_guide.py  llm_setup_automation.py
src/trading_agent/memory/: MEMORY_IMPLEMENTATION_ACTION_PLAN.md  MEMORY_INOT_DEEP_DIVE.md  README.md  SPRINT_SUMMARY_MEMORY_v1_5.md  __init__.py  models.py
src/trading_agent/resilience/: __init__.py  circuit_breaker.py  fallback_handlers.py  health_monitor.py  retry_strategies.py
src/trading_agent/strategies/: __init__.py  base_strategy.py  compiler.py  registry.py  selector.py  tester.py
src/trading_agent/tools/: __init__.py  base_tool.py  registry.py
tests/: conftest.py  llm_integration_tests.py  test_backend_api.py  test_economic_calendar.py  test_generate_order.py  test_inot_adapter.py  test_inot_claude_integration.py  test_input_fusion.py  test_market_context.py  test_memory_smoke.py  test_new_tools.py  test_news_stream.py  test_risk_with_normalizer.py  test_strategy_builder.py  test_strategy_phase3.py  test_symbol_normalization.py  test_tools.py
(+33 files in other folders)
